@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+13-Jul-2003
+~~~~~~~~~~~
+Added sort and selection buttons to the toolbar.  They start off disabled,
+enable them from Options=>Tools if you want them.  (Stephen Watson)
+
 12-Jul-2003
 ~~~~~~~~~~~
 Don't show hidden files on the SendTo menu (reported by Arnaud Calvo).
